fix: abnormal gap between content and header in MMRL

--- a/module/webui/styles/applist.css
+++ b/module/webui/styles/applist.css
@@ -22,7 +22,7 @@
     margin-bottom: 10px;
     outline: none;
     padding: 12px;
-    width: calc(100% - 5px);
+    width: calc(100% - 20px);
     max-width: 900px;
 }
 
@@ -144,7 +144,7 @@
     margin-bottom: 10px;
     outline: none;
     padding: 12px;
-    width: calc(100% - 5px);
+    width: calc(100% - 20px);
     max-width: 900px;
     transition: background-color 0.2s ease;
 }
